--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
 }
 
 .logo {
@@ -11,9 +16,25 @@
   padding: 4px 32px;
 }
 
+.left-links,
+.right-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
 ul {
   /* this removes the dots on the list items*/
+  margin: 0;
+  padding: 0;
   list-style-type: none;
+  display: flex;
+}
+
+li {
+  margin: 10px;
 }
 
 a {
