--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 .profile-image {
@@ -20,6 +24,20 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+}
+
+.right-header,
+.left-header {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  gap: 20px;
 }
 
 .logo {
@@ -45,4 +63,5 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
