--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,46 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal {
+  padding: 20px;
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.icon {
+  flex: 0 0 auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.header-text {
+  font-weight: bold;
+  font-size: larger;
+  margin: 0;
+  padding: 0;
+}
+
+.right-side {
+  display:flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.close-button {
+  flex: 0 0 auto;
+}
+
+.actions-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+}
